# gemma-tuner-multimodal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  MIGRATION.md  README.md  TROUBLESHOOTING.md  __init__.py  check_blacklist.py  cli_typer.py  config.ini.example  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup_mps.sh  visualizer.py  wizard.py
.github/: FUNDING.yml
.github/workflows/: ci-macos.yml  ci.yml  extended-tests.yml  publish-pypi.yml  release.yml
README/: Architecture.md  DEVELOPMENT_NOTES.md  Datasets.md  Distillation-eng.md  Distillation.md  KNOWN_ISSUES.md  LoRA-eng.md  LoRA.md  manage.md  refactor-plan.md  refactorv2.md
README/guides/: CUDA_to_CoreML_Conversion.md  README.md  Whisper_coreml-conversion.md
README/guides/apple-silicon/: HF-transformers-MPS-guide.md  LoRA-Apple-Silicon-Guide.md  gemma3n.md  gemma4-guide.md  metal-mpsgraph-whisper.md  pytorch-mps.md  pytorch-to-mlx-migration.md
README/guides/integrations/: exolabs-gym.md
README/guides/whisper/: coreml-hybrid-whispercpp.md  gguf-export-and-coreml-deployment.md
README/notes/: README.md  debug-notes.md  visualizer-debug-notes.md
README/plans/: 2026-04-02-whisper-focused-reorganization-plan.md  2026-04-02-whisper-migration-inventory.md  gemma4-upgrade.md  image-finetuning.md
README/skills/: phase-audit-rubric.md  plan-workflow-skills-guide.md
README/specifications/: Architecture.md  Datasets.md  Deployment.md  Distillation.md  Gemma3n.md  Granary.md  Quickstart.md  bigquery_view_fix.sql  blacklist.md  data-ingest.md  distillation-explainer.md  distributed-training-gym.md  eval.md  post-training.md  pseudo-labeling.md  testing.md  visualization.md  visualizer-readme.md  wizard.md
config/: config.ini.example
data/datasets/sample-text/: train.csv  validation.csv
docs/: CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  TROUBLESHOOTING.md
entrypoints/: cli_typer.py  main.py  visualizer.py  wizard.py
gemma_tuner/: cli_typer.py  constants.py  main.py  visualizer.py
gemma_tuner/core/: bigquery.py  bootstrap.py  config.py  inference.py  logging.py  ops.py  profile_config.py  run_queries.py  runs.py
gemma_tuner/models/common/: args.py  collators.py  visualizer.py  viz_trainer.py
gemma_tuner/models/gemma/: base_model_loader.py  constants.py  family.py  finetune.py  gemma4_patches.py
gemma_tuner/scripts/: __init__.py  blacklist.py  evaluate.py  export.py  export_gemma_lora.py  finetune.py  gather.py  gemma_generate.py  gemma_profiler.py  gemma_tiny_overfit.py  inference_common.py  prepare_data.py  prepare_granary.py  system_check.py
gemma_tuner/utils/: dataset_prep.py  dataset_sources.py  dataset_utils.py  device.py  gemma_dataset_prep.py  integrity.py  safe_io.py
gemma_tuner/visualization/: events.py  payload.py
gemma_tuner/wizard/: __init__.py  base.py  config.py  config_store.py  estimator.py  runner.py  ui.py
requirements/: requirements-gemma4.txt  requirements.txt
static/: visualizer.js
static/viz/: gemma-viz-app.js  gemma-viz-charts.js  gemma-viz-panels.js  gemma-viz-recording.js  gemma-viz-scene.js  gemma-viz-state.js  status.js
templates/: index.html
tests/: _fakes.py  manual_quick_viz.py  test_bootstrap.py  test_cli_help.py  test_config.py  test_config_defaults.py  test_dataset.py  test_dataset_prep_audio_clip.py  test_dataset_utils.py  test_device.py  test_distillation_workflow.py  test_distributed_launcher.py  test_family.py  test_finalization.py  test_finetune_core_data.py  test_finetune_core_trainer.py  test_finetune_model_load.py  test_gemma4_ci_guard.py  test_gemma4_patches.py  test_gemma_collator.py  test_gemma_dataset_prep.py  test_gemma_image_collator.py  test_gemma_text_collator.py  test_granary.py  test_inference.py  test_integrity.py  test_language_mode.py  test_lora_workflow.py  test_mps.py  test_quick_viz.py  test_revision_pinning.py  test_run_queries.py  test_runs.py  test_safe_io.py  test_sft_workflow.py  test_smoke.py  test_smoke_gemma3n.py  test_smoke_gemma4.py  test_smoke_image.py  test_smoke_image_multimodal.py  (+6 more)
tests/data/: text_completion_tiny.csv
tests/data/datasets/test_streaming/: train.csv
tests/data/image_caption_tiny/: img_08.tif  train.csv
tools/: check_blacklist.py  eval_gemma_asr.py  setup_config.py  setup_mps.sh
