[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-fine-tuner-macos"
version = "0.2.0"
description = "Whisper fine-tuning tools with Apple Silicon (MPS) support"
readme = "README.md"
authors = [{ name = "Whisper Fine-Tuner Maintainers" }]
requires-python = ">=3.8"
keywords = ["whisper", "speech", "asr", "pytorch", "apple silicon", "mps", "distributed"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
]
dependencies = [
  # Hugging Face ecosystem (tested compatible set)
  "transformers>=4.53.3",
  "datasets>=2.18.0",
  "accelerate>=0.27.2",
  "evaluate>=0.4.1",
  "peft>=0.9.0",

  # Audio processing
  "librosa>=0.10.0,<0.11.0",
  "soundfile>=0.12.0,<0.13.0",
  "scikit-learn>=1.2.0",

  # Utilities
  "numpy>=1.26.4",
  "pandas>=1.3.0",
  "tqdm>=4.65.0",
  "packaging>=21.0",
  "filelock>=3.9.0",
  "tabulate>=0.9.0,<0.10.0",

  # CLI and interaction
  "rich>=13.0.0,<14.0.0",
  "questionary>=2.0.0,<3.0.0",

  # Visualization (optional at runtime but included for convenience)
  "flask>=2.3.0,<3.0.0",
  "flask-socketio>=5.3.0,<6.0.0",
  "python-socketio>=5.9.0,<6.0.0",

  # Cloud storage / BigQuery
  "google-cloud-storage>=2.10.0",
  "google-cloud-bigquery>=3.11.0",
  "db-dtypes>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.3",
  "pytest>=7.4,<9.0",
]
gcp = [
  "google-cloud-storage>=2.10.0",
  "google-cloud-bigquery>=3.11.0",
  "db-dtypes>=1.4.0,<2.0.0",
]
viz = [
  "flask>=2.3.0,<3.0.0",
  "flask-socketio>=5.3.0,<6.0.0",
  "python-socketio>=5.9.0,<6.0.0",
]
all = [
  "whisper-fine-tuner-macos[gcp,viz]",
]

[project.scripts]
whisper-tuner = "cli_typer:app"

[project.urls]
Homepage = "https://github.com/mattmireles/whisper"
Repository = "https://github.com/mattmireles/whisper"
Issues = "https://github.com/mattmireles/whisper/issues"

[tool.setuptools]
# Include top-level single-file modules
py-modules = [
  "main",
  "cli_typer",
  "wft_constants",
  "visualizer",
]

[tool.setuptools.packages.find]
# Discover regular packages from package directories
include = [
  "core*",
  "utils*",
  "scripts*",
  "models*",
  "distributed*",
  "wizard*",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
