[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-fine-tuner-macos"
version = "0.2.0"
description = "Whisper fine-tuning tools with Apple Silicon (MPS) support"
readme = "README.md"
authors = [{ name = "Whisper Fine-Tuner Maintainers" }]
requires-python = ">=3.10"
keywords = ["whisper", "speech", "asr", "pytorch", "apple silicon", "mps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "Operating System :: OS Independent",
]
dependencies = [
  # Hugging Face ecosystem (tested compatible set)
  "transformers>=4.46.0,<5.0.0",
  "datasets>=4.0.0",
  "accelerate>=0.27.2",
  "evaluate>=0.4.1",
  "peft>=0.9.0",

  # Audio processing
  "librosa>=0.10.0,<0.11.0",
  "soundfile>=0.12.0,<0.13.0",
  "scikit-learn>=1.2.0",

  # Utilities
  "numpy>=1.26.4",
  "pandas>=1.3.0",
  "tqdm>=4.65.0",
  "packaging>=21.0",
  "filelock>=3.9.0",
  "tabulate>=0.9.0,<0.10.0",

  # CLI and interaction
  "typer>=0.9.0",
  "rich>=13.0.0",
  "questionary>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.3",
  "pytest>=7.4,<9.0",
]
gcp = [
  "google-cloud-storage>=2.10.0",
  "google-cloud-bigquery>=3.11.0",
  "db-dtypes>=1.4.0,<2.0.0",
]
viz = [
  "flask>=2.3.0,<3.0.0",
  "flask-socketio>=5.3.0,<6.0.0",
  "python-socketio>=5.9.0,<6.0.0",
]
all = [
  "whisper-fine-tuner-macos[dev,gcp,viz]",
]

[project.scripts]
whisper-tuner = "whisper_tuner.cli_typer:app"

[project.urls]
Homepage = "https://github.com/mattmireles/whisper-fine-tuner-macos"
Repository = "https://github.com/mattmireles/whisper-fine-tuner-macos"
Issues = "https://github.com/mattmireles/whisper-fine-tuner-macos/issues"

[tool.setuptools.packages.find]
# Discover regular packages from package directories
include = [
  "whisper_tuner*",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
# F841: unused variables are common in model code that checks loading without using the result.
# E741: ambiguous variable names (l, O, I) exist in legacy scientific code; harmless here.
# E501: line-length enforcement deferred; the codebase has many pre-existing long lines in
#   docstrings, argparse help strings, and long function calls that cannot be shortened safely.
# E402: some modules have intentional non-top imports (MPS bootstrap before torch).
ignore = ["F841", "E741", "E501", "E402"]

[tool.ruff.lint.per-file-ignores]
# Legacy argparse CLI: intentional import ordering (bootstrap before torch) and
# many long lines in argparse help strings that cannot be practically shortened.
"whisper_tuner/main.py" = ["I001", "E402", "E501"]
# Large service/utility modules with pre-existing long lines in docstrings and SQL.
"whisper_tuner/core/bigquery.py" = ["E501"]
"whisper_tuner/core/config.py" = ["E501"]
"whisper_tuner/core/inference.py" = ["E501"]
"whisper_tuner/models/common/visualizer.py" = ["E501", "E741"]
"whisper_tuner/models/distil_whisper/finetune.py" = ["E501"]
"whisper_tuner/wizard/config.py" = ["E501"]
"whisper_tuner/wizard/estimator.py" = ["E501"]
"whisper_tuner/cli_typer.py" = ["E501"]
